# CKKS_PIN

./: .gdbinit  .gitignore  CMakeLists.txt  README.md  SKA_crash.txt  config.conf  config.txt  install.sh  inyectionIsActive.txt  makefile  mytool.cpp
openfhe-static/: CMakeLists.txt
openfhe-static/src/core/include/math/: distributiongenerator.h
openfhe-static/src/pke/lib/encoding/: ckkspackedencoding.cpp
pintools/: README.md  range.patch
pintools/bitflips/: README.md  makefile  makefile.rules  pin_config.txt  pintool_BitFlip.cpp  pintool_BitFlip_NTT.cpp  pintool_BitFlip_checkpoint.cpp  pintool_BitFlip_registers.cpp  pintool_bitflip.cpp  pintool_bitflip_target.cpp
pintools/instCounter/: add_counter.cpp  add_inject.cpp  analyze_histograms.py  demangle_objdump.py  makefile  makefile.rules  openfhe_counter.cpp
src/: CMakeLists.txt  README.md  bitflip_ciphertext.cpp  bitflip_ciphertext_checkpoint.cpp  bitflip_registers.cpp  instructionCounter.cpp  instructionCounter_context.cpp  simpleTest.cpp  test.cpp  test_instructionContext.cpp  utils.cpp  utils.h
